[package]
name = "rusty-weather-cli"
version = "0.1.0"
edition = "2021"


[dependencies]
structopt = "0.3.15"
exitfailure = "0.5.1"
reqwest = { version = "0.10.6", features = ["json"]}
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
tokio = { version = "0.2.21", features = ["full"]}
anyhow = "1.0.31"
